# ai-stack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: api-tests.yml  e2e-tests.yml  python-lint.yml  python-typecheck.yml  ui-checks.yml
apps/api/: CLAUDE.md  pyproject.toml
apps/api/api/: main.py  settings.py
apps/api/tests/: test_health.py  test_settings.py
apps/ui/: CLAUDE.md  eslint.config.js  index.html  package.json  vite.config.ts
apps/ui/src/: App.tsx  index.css
apps/ui/src/components/: server-status-indicator.stories.tsx  server-status-indicator.tsx
apps/ui/src/components/ui/: button.stories.tsx  button.tsx
apps/ui/src/hooks/: use-server-health.ts
apps/ui/src/pages/: healthcheck.tsx  home.tsx
tests/e2e/: conftest.py  pyproject.toml  test_api_health.py  test_healthcheck.py
