[project]
name = "ai-stack"
version = "0.1.0"
description = "ai-stack monorepo root"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
extend-exclude = [".venv", "node_modules", "dist", "storybook-static"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.uv.workspace]
members = ["apps/*", "tests/e2e"]
exclude = ["apps/ui"]
